--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 WATSON_NLP_API_KEY=g2RIrdqY3MatBo7jAzRwc0IOYjfg6FHSQIJHSGeavCdw
 WATSON_NLP_URL=https://api.au-syd.natural-language-understanding.watson.cloud.ibm.com/instances/4cb901fe-1743-4f9a-8c61-d1f39b3d1215
+GEMINI_API_KEY=AIzaSyCHZBiMT8I6oFfHJloX_vvbDqvREfhyVOA
