--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,4 @@ STRIPE_PRO_PRICE_ID=price_YOUR_PRO_PRICE_ID
 STRIPE_CREDIT_PACK_PRICE_ID=price_YOUR_CREDIT_PACK_PRICE_ID
 STRIPE_WEBHOOK_SECRET=whsec_YOUR_WEBHOOK_SECRET
 DOMAIN_URL=http://127.0.0.1:5000
+MISTRAL_API_KEY=Om9YIaeWFVHtKqvMTt7jc9DGn47dF1Go
